# deskhub-agent

./: Cargo.toml  README.md
src/: desk.rs  main.rs  types.rs  utils.rs
src/win32/: guide.rs  mod.rs  service.rs  service_ctrl.rs
