[package]
name = "deskhub"
version = "0.1.0"
authors = ["david shi<fackweb@gmail.com>"]
edition = "2021"
description = "Deskhub Remote Desktop Agent"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { verison = "0.12.1", features= ["image"]} 
tokio = { version = "1.36.0", features = ["full"] }
once_cell = "1.19.0"
log = "0.4"
fern = "0.6"
chrono = "0.4"

[target.'cfg(all(windows, debug))']
rustflags = []

[target.'cfg(all(windows, release))']
rustflags = ["-C", "link-args=/SUBSYSTEM:WINDOWS"]

[target.'cfg(windows)'.dependencies]
windows-sys={version = "0.52.0", features = [
  "Win32_System_Environment",
  "Win32_Security",
  "Win32_System_Services",
  "Win32_System_RemoteDesktop",
  "Win32_System_Threading",
  "Win32_System_Diagnostics_Debug"
]}
widestring={version = "1.0.2"}

[package.metadata.bundle]
name = "DeskHub"
identifier = "com.dd.ddd"
version = "0.1.0"
resources = ["assets/"]